--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,60 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(207, 209, 209);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.image {
+  width: 90%;
+  height: 70%;
+}
+.img-cont:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+  box-shadow: 0 10px 10px 4px rgb(214, 241, 240);
+  transition: transform 0.2s;
+}
+.img-cont {
+  width: 30%;
+  height: 100%;
+  margin-bottom: 10%;
+  margin-left: 2%;
+  justify-content: center;
+  /* background-color: grey; */
+}
+.container {
+  list-style: none;
+  display: flex;
+  flex-flow: wrap;
+  height: 100vh;
+}
+.btn {
+  width: 8rem;
+  height: 2rem;
+  background-color: rgb(9, 71, 9);
+  color: white;
+  letter-spacing: 3px;
+  font-weight: bold;
+  border-radius: 4px;
+  border-color: rgb(9, 71, 9);
+}
+h4 {
+  letter-spacing: 3px;
+  color: rgb(97, 94, 90);
+}
+
+h1 {
+  color: rgb(22, 24, 24);
+  margin-bottom: 3rem;
+  text-align: left;
+  color: rgb(71, 71, 69);
+  padding-left: 1rem;
 }
