--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,12 +29,14 @@ code {
   margin-left: 2%;
   justify-content: center;
   padding: 1rem 1rem;
+  display: block;
 }
 .container {
   list-style: none;
   display: flex;
   flex-flow: wrap;
   height: 100vh;
+  position: relative;
 }
 .btn {
   width: 8rem;
@@ -62,5 +64,30 @@ h1 {
 .icon {
   color: red;
   font-size: 2rem;
-  position: relative;
+  position: absolute;
+  top: 100;
+  left: 50;
+  padding: 1rem;
+}
+.small-img {
+  height: 300px;
+  width: 300px;
+}
+.faded-cont {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  /* background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4); */
+}
+.close {
+  color: red;
+  float: right;
+  padding-right: 1rem;
+  font-size: 2rem;
 }
